--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,15 +12,61 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--primary);
+  color: var(--secondary);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.siteName {
+  color: var(--secondary);
+  font-size: 24px;
+  font-weight: 400;
+  font-family: jersey;
+}
+@layer base {
+  :root {
+    --primary: #f5f5f5;
+    --secondary: #292929;
+    --link: #7b7b7b;
+    --attention: #ffd04d;
+    --misc: #007aff;
+    --err: #ff3b30;
+    --success: #34c759;
+  }
+
+  .text-link {
+    @apply text-[var(--link)] text-[20px] font-normal no-underline cursor-pointer;
+  }
+  .h1 {
+    @apply text-[var(--secondary)] text-[40px] font-bold;
+  }
+  .h2 {
+    @apply text-[var(--secondary)] text-[32px] font-bold;
+  }
+  .h3 {
+    @apply text-[var(--secondary)] text-[24px] font-bold;
+  }
+  .h3Nb {
+    @apply text-[var(--secondary)] text-[24px] font-normal;
+  }
+  .h4 {
+    @apply text-[var(--secondary)] text-[20px] font-bold;
+  }
+  .h4Nb {
+    @apply text-[var(--secondary)] text-[20px] font-normal;
+  }
+  .h5 {
+    @apply text-[var(--secondary)] text-[16px] font-normal;
+  }
+  .h6 {
+    @apply text-[var(--secondary)] text-[12px] font-normal;
+  }
 }
